# morphism

./: Cargo.toml
composer/: Cargo.toml
composer/src/: cli.rs  lib.rs  store.rs  tac.rs
prover/: Cargo.toml
prover/src/: lib.rs  vrf.rs
