[package]
name = "morphism-composer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
blake2 = { workspace = true }
serde = { workspace = true }
bincode = "1.3.3"
sled = "0.34.7"
env_logger = "0.11.3"
log = "0.4.21"
ffmpeg = { package = "ffmpeg-next", version = "6.1.1" }
xmt = { package = "sparse-merkle-tree", version = "0.6.1" }
sha256 = "1.5.0"
clap = { version = "4.1.7", features = ["derive"] }
dirs = "5.0.1"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking"] }
uriparse = "0.6.4"
tempdir = "0.3.7"

[[bin]]
name = "mc-cli"
path = "src/cli.rs"

[[bin]]
name = "mc-server"
path = "src/server.rs"
